fix deprecations, cleanup code. add placeholders for job monitor email/pw in airavata-server.properties