@@ -33,7 +33,6 @@
     <name>Profile User Core</name>
 
     <properties>
-        <derby.version>10.11.1.1</derby.version>
         <surefire.version>2.18.1</surefire.version>
         <skipTests>false</skipTests>
         <mysql.connector.version>8.0.31</mysql.connector.version>
@@ -52,13 +51,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                    <release>17</release>
-                    <compilerArgs>
-                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
@@ -68,7 +63,6 @@
                 <inherited>true</inherited>
                 <configuration>
                     <failIfNoTests>false</failIfNoTests>
-                    <!--<skipTests>${skipTests}</skipTests>-->
                     <skipTests>true</skipTests>
                     <workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
                 </configuration>
